Phase III/y.output
Terminals unused in grammar

    GET_TRAJ
    DOLLAR
    DOUBLE_QUOTE
    SINGLE_QUOTE


Grammar

    0 $accept: code $end

    1 code: code_subpart
    2     | code code_subpart

    3 code_subpart: comments
    4             | startfn
    5             | function_decl

    6 $@1: ε

    7 $@2: ε

    8 startfn: START OPENCU $@1 body $@2 CLOSECU

    9 body: exp_stmt body
   10     | call_stmt_with_dot body
   11     | conditional_stmt body
   12     | loop_stmt body
   13     | unary_operation_without_dot DOT body
   14     | return_stmt body
   15     | comments body
   16     | output_stmt body
   17     | input_stmt body
   18     | ε

   19 $@3: ε

   20 $@4: ε

   21 body: SCOPEOPEN $@3 OPENCU body SCOPECLOSE $@4 CLOSECU body
   22     | inbuilt_functions_with_dot body
   23     | decl_stmt_with_exp body

   24 loop_body: exp_stmt loop_body
   25          | call_stmt_with_dot loop_body
   26          | conditional_stmt loop_body
   27          | loop_stmt loop_body
   28          | unary_operation_without_dot DOT loop_body
   29          | return_stmt loop_body
   30          | comments loop_body
   31          | output_stmt loop_body
   32          | input_stmt loop_body
   33          | ε

   34 $@5: ε

   35 $@6: ε

   36 loop_body: SCOPEOPEN $@5 OPENCU loop_body SCOPECLOSE $@6 CLOSECU body
   37          | inbuilt_functions_with_dot loop_body
   38          | decl_stmt_with_exp loop_body
   39          | BREAK DOT loop_body

   40 bi_op: ADD
   41      | SUB
   42      | MUL
   43      | DIV
   44      | MOD
   45      | EXP

   46 relop: EQ
   47      | NEQ
   48      | GEQ
   49      | GT
   50      | LEQ
   51      | LT

   52 vectors: OPENSQ check_rhs_exp COMMA check_rhs_exp CLOSESQ

   53 primi_datatype: INT
   54               | DOUBLE
   55               | BOOL
   56               | STRING

   57 non_pri_datatype: MASS
   58                 | TIME
   59                 | POSITION
   60                 | VELOCITY
   61                 | ACC
   62                 | ENERGY
   63                 | THETA
   64                 | E
   65                 | DISTANCE
   66                 | MOMENTUM

   67 datatypes: primi_datatype
   68          | non_pri_datatype

   69 single_variable: ID
   70                | ID dimensions

   71 dimensions: OPENSQ check_rhs_exp CLOSESQ
   72           | OPENSQ check_rhs_exp CLOSESQ dimensions

   73 single_variable_for_exp_stmt: single_variable

   74 exp_stmt: single_variable_for_exp_stmt ASSGN check_rhs_exp DOT

   75 pos: FIRST
   76    | SECOND

   77 anything_with_value: single_variable
   78                    | NON_NEGATIVE_INT
   79                    | INTEGER_CONSTANT
   80                    | FLOAT_CONSTANT
   81                    | STRING_CONSTANT
   82                    | TRUE
   83                    | FALSE
   84                    | call_stmt_without_dot
   85                    | vectors
   86                    | UNINEG anything_with_value
   87                    | call_stmt_without_dot ARROW pos
   88                    | inbuilt_functions ARROW pos
   89                    | inbuilt_functions
   90                    | vectors ARROW pos
   91                    | ID ARROW pos
   92                    | single_variable UNIOP
   93                    | SIN OPENCC anything_with_value CLOSECC
   94                    | COS OPENCC anything_with_value CLOSECC
   95                    | TAN OPENCC anything_with_value CLOSECC

   96 operations: bi_op
   97           | LOGICOP
   98           | relop

   99 rhs_term: openccs anything_with_value
  100         | openccs anything_with_value closeccs
  101         | anything_with_value closeccs

  102 rhs_exp: rhs_term operations rhs_exp
  103        | anything_with_value operations rhs_exp
  104        | rhs_term
  105        | anything_with_value

  106 openccs: openccs OPENCC
  107        | OPENCC

  108 closeccs: closeccs CLOSECC
  109         | CLOSECC

  110 call_stmt_with_dot: call_stmt_without_dot DOT

  111 call_stmt_without_dot: ID OPENCU CLOSECU
  112                      | ID OPENCU funccallargs CLOSECU

  113 funccallargs: check_rhs_exp
  114             | check_rhs_exp COMMA funccallargs

  115 conditional_stmt_start: OPENSQ check_rhs_exp CLOSESQ OPENCU

  116 conditional_stmt: conditional_stmt_start loop_body CLOSECU

  117 $@7: ε

  118 $@8: ε

  119 conditional_stmt: conditional_stmt_start loop_body CLOSECU $@7 OTHERWISE OPENCU $@8 loop_body CLOSECU

  120 $@9: ε

  121 loop_stmt: LOOP OPENSQ check_rhs_exp CLOSESQ OPENCU $@9 loop_body CLOSECU

  122 unary_operation_without_dot: single_variable UNIOP
  123                            | UNINEG check_rhs_exp

  124 return_stmt: DARR check_rhs_exp DOT
  125            | DARR DOT

  126 comments: CMT

  127 output_stmt: OUTPUT COLON check_rhs_exp DOT

  128 input_stmt: INPUT COLON ids DOT

  129 $@10: ε

  130 ids: single_variable $@10 COMMA ids
  131    | single_variable

  132 inbuilt_functions_with_dot: inbuilt_functions DOT

  133 inbuilt_functions: rel_to_mag
  134                  | rel_to_vel
  135                  | rel_to_pos
  136                  | rel_to_acc
  137                  | rel_to_energy
  138                  | rel_to_angle
  139                  | rel_to_collision
  140                  | rel_to_momentum
  141                  | miscellaneous

  142 stand_id: ID

  143 rel_to_mag: MAG OPENCU stand_id CLOSECU
  144           | MAG OPENCU vectors CLOSECU

  145 rel_to_pos: OPENCU stand_id CLOSECU SETR OPENCU check_rhs_exp CLOSECU
  146           | OPENCU stand_id CLOSECU ADDR OPENCU check_rhs_exp CLOSECU
  147           | OPENCU stand_id CLOSECU R_AFTER OPENCU check_rhs_exp CLOSECU
  148           | OPENCU stand_id CLOSECU GETR

  149 rel_to_vel: OPENCU stand_id CLOSECU SETV OPENCU check_rhs_exp CLOSECU
  150           | OPENCU stand_id CLOSECU ADDV OPENCU check_rhs_exp CLOSECU
  151           | OPENCU stand_id CLOSECU V_AFTER OPENCU check_rhs_exp CLOSECU
  152           | OPENCU stand_id CLOSECU GETV

  153 rel_to_momentum: OPENCU stand_id CLOSECU SETP OPENCU check_rhs_exp CLOSECU

  154 rel_to_acc: OPENCU stand_id CLOSECU SETA OPENCU check_rhs_exp CLOSECU
  155           | OPENCU stand_id CLOSECU ADDA OPENCU check_rhs_exp CLOSECU
  156           | OPENCU stand_id CLOSECU GETA

  157 rel_to_energy: OPENCU stand_id CLOSECU KE_AFTER OPENCU check_rhs_exp CLOSECU
  158              | OPENCU stand_id CLOSECU PE_AFTER OPENCU check_rhs_exp CLOSECU
  159              | OPENCU stand_id CLOSECU TE_AFTER OPENCU check_rhs_exp CLOSECU

  160 rel_to_angle: OPENCU stand_id CLOSECU ANGLE_AFTER OPENCU check_rhs_exp CLOSECU

  161 rel_to_collision: OPENCU stand_id CLOSECU COLLIDE OPENCU stand_id COMMA ID CLOSECU
  162                 | OPENCU stand_id CLOSECU COLLIDE OPENCU stand_id CLOSECU
  163                 | OPENCU stand_id CLOSECU TIME_TO_COLLIDE OPENCU stand_id CLOSECU

  164 miscellaneous: OPENCU stand_id CLOSECU S_AFTER OPENCU check_rhs_exp CLOSECU
  165              | OPENCU stand_id CLOSECU ROC_AFTER OPENCU check_rhs_exp CLOSECU
  166              | OPENCU stand_id CLOSECU P_AFTER OPENCU check_rhs_exp CLOSECU
  167              | OPENCU stand_id CLOSECU TIME_TO_R OPENCU term_misc COMMA term_misc CLOSECU
  168              | OPENCU stand_id CLOSECU TIME_TO_V OPENCU term_misc COMMA term_misc CLOSECU

  169 term_misc: check_rhs_exp
  170          | QUESTION

  171 decl_stmt_with_exp: datatypes expressions DOT

  172 expressions: expression COMMA expressions
  173            | expression

  174 single_variable_declare: single_variable

  175 $@11: ε

  176 check_rhs_exp: $@11 rhs_exp

  177 expression: single_variable_declare ASSGN check_rhs_exp
  178           | single_variable_declare

  179 idadd2: ID

  180 $@12: ε

  181 $@13: ε

  182 function_decl: datatypes idadd2 ASSGN OPENCU parameters CLOSECU DARR OPENCU $@12 body $@13 CLOSECU

  183 $@14: ε

  184 $@15: ε

  185 function_decl: datatypes idadd2 ASSGN OPENCU CLOSECU DARR OPENCU $@14 body $@15 CLOSECU

  186 parameters: datatypes ID

  187 $@16: ε

  188 parameters: datatypes ID $@16 COMMA parameters


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER_CONSTANT <object> (258) 79
    STRING_CONSTANT <object> (259) 81
    FLOAT_CONSTANT <object> (260) 80
    TRUE <object> (261) 82
    FALSE <object> (262) 83
    INT <object> (263) 53
    DOUBLE <object> (264) 54
    STRING <object> (265) 56
    BOOL <object> (266) 55
    MASS <object> (267) 57
    TIME <object> (268) 58
    POSITION <object> (269) 59
    VELOCITY <object> (270) 60
    ACC <object> (271) 61
    ENERGY <object> (272) 62
    THETA <object> (273) 63
    E <object> (274) 64
    DISTANCE <object> (275) 65
    MOMENTUM <object> (276) 66
    ID <object> (277) 69 70 91 111 112 142 161 179 186 188
    INPUT <object> (278) 128
    OUTPUT <object> (279) 127
    SETR <object> (280) 145
    ADDR <object> (281) 146
    SETV <object> (282) 149
    ADDV <object> (283) 150
    SETA <object> (284) 154
    ADDA <object> (285) 155
    SETP <object> (286) 153
    GETR <object> (287) 148
    GETA <object> (288) 156
    GETV <object> (289) 152
    KE_AFTER <object> (290) 157
    PE_AFTER <object> (291) 158
    TE_AFTER <object> (292) 159
    ANGLE_AFTER <object> (293) 160
    V_AFTER <object> (294) 151
    R_AFTER <object> (295) 147
    GET_TRAJ <object> (296)
    COLLIDE <object> (297) 161 162
    TIME_TO_COLLIDE <object> (298) 163
    ROC_AFTER <object> (299) 165
    P_AFTER <object> (300) 166
    S_AFTER <object> (301) 164
    TIME_TO_R <object> (302) 167
    TIME_TO_V <object> (303) 168
    LOOP <object> (304) 121
    BREAK <object> (305) 39
    START <object> (306) 8
    SIN <object> (307) 93
    COS <object> (308) 94
    TAN <object> (309) 95
    MAG <object> (310) 143 144
    OPENCC <object> (311) 93 94 95 106 107
    CLOSECC <object> (312) 93 94 95 108 109
    OPENSQ <object> (313) 52 71 72 115 121
    CLOSESQ <object> (314) 52 71 72 115 121
    OPENCU <object> (315) 8 21 36 111 112 115 119 121 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 182 185
    CLOSECU <object> (316) 8 21 36 111 112 116 119 121 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 182 185
    DOLLAR <object> (317)
    DOT <object> (318) 13 28 39 74 110 124 125 127 128 132 171
    DOUBLE_QUOTE <object> (319)
    SINGLE_QUOTE <object> (320)
    COMMA <object> (321) 52 114 130 161 167 168 172 188
    COLON <object> (322) 127 128
    ARROW <object> (323) 87 88 90 91
    ADD <object> (324) 40
    SUB <object> (325) 41
    MUL <object> (326) 42
    DIV <object> (327) 43
    MOD <object> (328) 44
    EXP <object> (329) 45
    EQ <object> (330) 46
    NEQ <object> (331) 47
    GEQ <object> (332) 48
    LEQ <object> (333) 50
    GT <object> (334) 49
    LT <object> (335) 51
    LOGICOP <object> (336) 97
    UNIOP <object> (337) 92 122
    UNINEG <object> (338) 86 123
    ASSGN <object> (339) 74 177 182 185
    DARR <object> (340) 124 125 182 185
    CMT <object> (341) 126
    QUESTION <object> (342) 170
    NON_NEGATIVE_INT <object> (343) 78
    FIRST <object> (344) 75
    SECOND <object> (345) 76
    OTHERWISE <object> (346) 119
    SCOPEOPEN <object> (347) 21 36
    SCOPECLOSE <object> (348) 21 36


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    code <object> (95)
        on left: 1 2
        on right: 0 2
    code_subpart <object> (96)
        on left: 3 4 5
        on right: 1 2
    startfn <object> (97)
        on left: 8
        on right: 4
    $@1 (98)
        on left: 6
        on right: 8
    $@2 (99)
        on left: 7
        on right: 8
    body <object> (100)
        on left: 9 10 11 12 13 14 15 16 17 18 21 22 23
        on right: 8 9 10 11 12 13 14 15 16 17 21 22 23 36 182 185
    $@3 (101)
        on left: 19
        on right: 21
    $@4 (102)
        on left: 20
        on right: 21
    loop_body <object> (103)
        on left: 24 25 26 27 28 29 30 31 32 33 36 37 38 39
        on right: 24 25 26 27 28 29 30 31 32 36 37 38 39 116 119 121
    $@5 (104)
        on left: 34
        on right: 36
    $@6 (105)
        on left: 35
        on right: 36
    bi_op <object> (106)
        on left: 40 41 42 43 44 45
        on right: 96
    relop <object> (107)
        on left: 46 47 48 49 50 51
        on right: 98
    vectors <object> (108)
        on left: 52
        on right: 85 90 144
    primi_datatype <object> (109)
        on left: 53 54 55 56
        on right: 67
    non_pri_datatype <object> (110)
        on left: 57 58 59 60 61 62 63 64 65 66
        on right: 68
    datatypes <object> (111)
        on left: 67 68
        on right: 171 182 185 186 188
    single_variable <object> (112)
        on left: 69 70
        on right: 73 77 92 122 130 131 174
    dimensions <object> (113)
        on left: 71 72
        on right: 70 72
    single_variable_for_exp_stmt <object> (114)
        on left: 73
        on right: 74
    exp_stmt <object> (115)
        on left: 74
        on right: 9 24
    pos <object> (116)
        on left: 75 76
        on right: 87 88 90 91
    anything_with_value <object> (117)
        on left: 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95
        on right: 86 93 94 95 99 100 101 103 105
    operations <object> (118)
        on left: 96 97 98
        on right: 102 103
    rhs_term <object> (119)
        on left: 99 100 101
        on right: 102 104
    rhs_exp <object> (120)
        on left: 102 103 104 105
        on right: 102 103 176
    openccs <object> (121)
        on left: 106 107
        on right: 99 100 106
    closeccs <object> (122)
        on left: 108 109
        on right: 100 101 108
    call_stmt_with_dot <object> (123)
        on left: 110
        on right: 10 25
    call_stmt_without_dot <object> (124)
        on left: 111 112
        on right: 84 87 110
    funccallargs <arg_object> (125)
        on left: 113 114
        on right: 112 114
    conditional_stmt_start <object> (126)
        on left: 115
        on right: 116 119
    conditional_stmt <object> (127)
        on left: 116 119
        on right: 11 26
    $@7 (128)
        on left: 117
        on right: 119
    $@8 (129)
        on left: 118
        on right: 119
    loop_stmt <object> (130)
        on left: 121
        on right: 12 27
    $@9 (131)
        on left: 120
        on right: 121
    unary_operation_without_dot <object> (132)
        on left: 122 123
        on right: 13 28
    return_stmt <object> (133)
        on left: 124 125
        on right: 14 29
    comments <object> (134)
        on left: 126
        on right: 3 15 30
    output_stmt <object> (135)
        on left: 127
        on right: 16 31
    input_stmt <object> (136)
        on left: 128
        on right: 17 32
    ids <object> (137)
        on left: 130 131
        on right: 128 130
    $@10 (138)
        on left: 129
        on right: 130
    inbuilt_functions_with_dot <object> (139)
        on left: 132
        on right: 22 37
    inbuilt_functions <object> (140)
        on left: 133 134 135 136 137 138 139 140 141
        on right: 88 89 132
    stand_id <object> (141)
        on left: 142
        on right: 143 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168
    rel_to_mag <object> (142)
        on left: 143 144
        on right: 133
    rel_to_pos <object> (143)
        on left: 145 146 147 148
        on right: 135
    rel_to_vel <object> (144)
        on left: 149 150 151 152
        on right: 134
    rel_to_momentum <object> (145)
        on left: 153
        on right: 140
    rel_to_acc <object> (146)
        on left: 154 155 156
        on right: 136
    rel_to_energy <object> (147)
        on left: 157 158 159
        on right: 137
    rel_to_angle <object> (148)
        on left: 160
        on right: 138
    rel_to_collision <object> (149)
        on left: 161 162 163
        on right: 139
    miscellaneous <object> (150)
        on left: 164 165 166 167 168
        on right: 141
    term_misc <object> (151)
        on left: 169 170
        on right: 167 168
    decl_stmt_with_exp <object> (152)
        on left: 171
        on right: 23 38
    expressions <object> (153)
        on left: 172 173
        on right: 171 172
    single_variable_declare <object> (154)
        on left: 174
        on right: 177 178
    check_rhs_exp <object> (155)
        on left: 176
        on right: 52 71 72 74 113 114 115 121 123 124 127 145 146 147 149 150 151 153 154 155 157 158 159 160 164 165 166 169 177
    $@11 (156)
        on left: 175
        on right: 176
    expression <object> (157)
        on left: 177 178
        on right: 172 173
    idadd2 <object> (158)
        on left: 179
        on right: 182 185
    function_decl <object> (159)
        on left: 182 185
        on right: 5
    $@12 (160)
        on left: 180
        on right: 182
    $@13 (161)
        on left: 181
        on right: 182
    $@14 (162)
        on left: 183
        on right: 185
    $@15 (163)
        on left: 184
        on right: 185
    parameters <object> (164)
        on left: 186 188
        on right: 182 188
    $@16 (165)
        on left: 187
        on right: 188


State 0

    0 $accept: • code $end

    INT       shift, and go to state 1
    DOUBLE    shift, and go to state 2
    STRING    shift, and go to state 3
    BOOL      shift, and go to state 4
    MASS      shift, and go to state 5
    TIME      shift, and go to state 6
    POSITION  shift, and go to state 7
    VELOCITY  shift, and go to state 8
    ACC       shift, and go to state 9
    ENERGY    shift, and go to state 10
    THETA     shift, and go to state 11
    E         shift, and go to state 12
    DISTANCE  shift, and go to state 13
    MOMENTUM  shift, and go to state 14
    START     shift, and go to state 15
    CMT       shift, and go to state 16

    code              go to state 17
    code_subpart      go to state 18
    startfn           go to state 19
    primi_datatype    go to state 20
    non_pri_datatype  go to state 21
    datatypes         go to state 22
    comments          go to state 23
    function_decl     go to state 24


State 1

   53 primi_datatype: INT •

    $default  reduce using rule 53 (primi_datatype)


State 2

   54 primi_datatype: DOUBLE •

    $default  reduce using rule 54 (primi_datatype)


State 3

   56 primi_datatype: STRING •

    $default  reduce using rule 56 (primi_datatype)


State 4

   55 primi_datatype: BOOL •

    $default  reduce using rule 55 (primi_datatype)


State 5

   57 non_pri_datatype: MASS •

    $default  reduce using rule 57 (non_pri_datatype)


State 6

   58 non_pri_datatype: TIME •

    $default  reduce using rule 58 (non_pri_datatype)


State 7

   59 non_pri_datatype: POSITION •

    $default  reduce using rule 59 (non_pri_datatype)


State 8

   60 non_pri_datatype: VELOCITY •

    $default  reduce using rule 60 (non_pri_datatype)


State 9

   61 non_pri_datatype: ACC •

    $default  reduce using rule 61 (non_pri_datatype)


State 10

   62 non_pri_datatype: ENERGY •

    $default  reduce using rule 62 (non_pri_datatype)


State 11

   63 non_pri_datatype: THETA •

    $default  reduce using rule 63 (non_pri_datatype)


State 12

   64 non_pri_datatype: E •

    $default  reduce using rule 64 (non_pri_datatype)


State 13

   65 non_pri_datatype: DISTANCE •

    $default  reduce using rule 65 (non_pri_datatype)


State 14

   66 non_pri_datatype: MOMENTUM •

    $default  reduce using rule 66 (non_pri_datatype)


State 15

    8 startfn: START • OPENCU $@1 body $@2 CLOSECU

    OPENCU  shift, and go to state 25


State 16

  126 comments: CMT •

    $default  reduce using rule 126 (comments)


State 17

    0 $accept: code • $end
    2 code: code • code_subpart

    $end      shift, and go to state 26
    INT       shift, and go to state 1
    DOUBLE    shift, and go to state 2
    STRING    shift, and go to state 3
    BOOL      shift, and go to state 4
    MASS      shift, and go to state 5
    TIME      shift, and go to state 6
    POSITION  shift, and go to state 7
    VELOCITY  shift, and go to state 8
    ACC       shift, and go to state 9
    ENERGY    shift, and go to state 10
    THETA     shift, and go to state 11
    E         shift, and go to state 12
    DISTANCE  shift, and go to state 13
    MOMENTUM  shift, and go to state 14
    START     shift, and go to state 15
    CMT       shift, and go to state 16

    code_subpart      go to state 27
    startfn           go to state 19
    primi_datatype    go to state 20
    non_pri_datatype  go to state 21
    datatypes         go to state 22
    comments          go to state 23
    function_decl     go to state 24


State 18

    1 code: code_subpart •

    $default  reduce using rule 1 (code)


State 19

    4 code_subpart: startfn •

    $default  reduce using rule 4 (code_subpart)


State 20

   67 datatypes: primi_datatype •

    $default  reduce using rule 67 (datatypes)


State 21

   68 datatypes: non_pri_datatype •

    $default  reduce using rule 68 (datatypes)


State 22

  182 function_decl: datatypes • idadd2 ASSGN OPENCU parameters CLOSECU DARR OPENCU $@12 body $@13 CLOSECU
  185              | datatypes • idadd2 ASSGN OPENCU CLOSECU DARR OPENCU $@14 body $@15 CLOSECU

    ID  shift, and go to state 28

    idadd2  go to state 29


State 23

    3 code_subpart: comments •

    $default  reduce using rule 3 (code_subpart)


State 24

    5 code_subpart: function_decl •

    $default  reduce using rule 5 (code_subpart)


State 25

    8 startfn: START OPENCU • $@1 body $@2 CLOSECU

    $default  reduce using rule 6 ($@1)

    $@1  go to state 30


State 26

    0 $accept: code $end •

    $default  accept


State 27

    2 code: code code_subpart •

    $default  reduce using rule 2 (code)


State 28

  179 idadd2: ID •

    $default  reduce using rule 179 (idadd2)


State 29

  182 function_decl: datatypes idadd2 • ASSGN OPENCU parameters CLOSECU DARR OPENCU $@12 body $@13 CLOSECU
  185              | datatypes idadd2 • ASSGN OPENCU CLOSECU DARR OPENCU $@14 body $@15 CLOSECU

    ASSGN  shift, and go to state 31


State 30

    8 startfn: START OPENCU $@1 • body $@2 CLOSECU

    INT        shift, and go to state 1
    DOUBLE     shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    MASS       shift, and go to state 5
    TIME       shift, and go to state 6
    POSITION   shift, and go to state 7
    VELOCITY   shift, and go to state 8
    ACC        shift, and go to state 9
    ENERGY     shift, and go to state 10
    THETA      shift, and go to state 11
    E          shift, and go to state 12
    DISTANCE   shift, and go to state 13
    MOMENTUM   shift, and go to state 14
    ID         shift, and go to state 32
    INPUT      shift, and go to state 33
    OUTPUT     shift, and go to state 34
    LOOP       shift, and go to state 35
    MAG        shift, and go to state 36
    OPENSQ     shift, and go to state 37
    OPENCU     shift, and go to state 38
    UNINEG     shift, and go to state 39
    DARR       shift, and go to state 40
    CMT        shift, and go to state 16
    SCOPEOPEN  shift, and go to state 41

    $default  reduce using rule 18 (body)

    body                          go to state 42
    primi_datatype                go to state 20
    non_pri_datatype              go to state 21
    datatypes                     go to state 43
    single_variable               go to state 44
    single_variable_for_exp_stmt  go to state 45
    exp_stmt                      go to state 46
    call_stmt_with_dot            go to state 47
    call_stmt_without_dot         go to state 48
    conditional_stmt_start        go to state 49
    conditional_stmt              go to state 50
    loop_stmt                     go to state 51
    unary_operation_without_dot   go to state 52
    return_stmt                   go to state 53
    comments                      go to state 54
    output_stmt                   go to state 55
    input_stmt                    go to state 56
    inbuilt_functions_with_dot    go to state 57
    inbuilt_functions             go to state 58
    rel_to_mag                    go to state 59
    rel_to_pos                    go to state 60
    rel_to_vel                    go to state 61
    rel_to_momentum               go to state 62
    rel_to_acc                    go to state 63
    rel_to_energy                 go to state 64
    rel_to_angle                  go to state 65
    rel_to_collision              go to state 66
    miscellaneous                 go to state 67
    decl_stmt_with_exp            go to state 68


State 31

  182 function_decl: datatypes idadd2 ASSGN • OPENCU parameters CLOSECU DARR OPENCU $@12 body $@13 CLOSECU
  185              | datatypes idadd2 ASSGN • OPENCU CLOSECU DARR OPENCU $@14 body $@15 CLOSECU

    OPENCU  shift, and go to state 69


State 32

   69 single_variable: ID •
   70                | ID • dimensions
  111 call_stmt_without_dot: ID • OPENCU CLOSECU
  112                      | ID • OPENCU funccallargs CLOSECU

    OPENSQ  shift, and go to state 70
    OPENCU  shift, and go to state 71

    $default  reduce using rule 69 (single_variable)

    dimensions  go to state 72


State 33

  128 input_stmt: INPUT • COLON ids DOT

    COLON  shift, and go to state 73


State 34

  127 output_stmt: OUTPUT • COLON check_rhs_exp DOT

    COLON  shift, and go to state 74


State 35

  121 loop_stmt: LOOP • OPENSQ check_rhs_exp CLOSESQ OPENCU $@9 loop_body CLOSECU

    OPENSQ  shift, and go to state 75


State 36

  143 rel_to_mag: MAG • OPENCU stand_id CLOSECU
  144           | MAG • OPENCU vectors CLOSECU

    OPENCU  shift, and go to state 76


State 37

  115 conditional_stmt_start: OPENSQ • check_rhs_exp CLOSESQ OPENCU

    $default  reduce using rule 175 ($@11)

    check_rhs_exp  go to state 77
    $@11           go to state 78


State 38

  145 rel_to_pos: OPENCU • stand_id CLOSECU SETR OPENCU check_rhs_exp CLOSECU
  146           | OPENCU • stand_id CLOSECU ADDR OPENCU check_rhs_exp CLOSECU
  147           | OPENCU • stand_id CLOSECU R_AFTER OPENCU check_rhs_exp CLOSECU
  148           | OPENCU • stand_id CLOSECU GETR
  149 rel_to_vel: OPENCU • stand_id CLOSECU SETV OPENCU check_rhs_exp CLOSECU
  150           | OPENCU • stand_id CLOSECU ADDV OPENCU check_rhs_exp CLOSECU
  151           | OPENCU • stand_id CLOSECU V_AFTER OPENCU check_rhs_exp CLOSECU
  152           | OPENCU • stand_id CLOSECU GETV
  153 rel_to_momentum: OPENCU • stand_id CLOSECU SETP OPENCU check_rhs_exp CLOSECU
  154 rel_to_acc: OPENCU • stand_id CLOSECU SETA OPENCU check_rhs_exp CLOSECU
  155           | OPENCU • stand_id CLOSECU ADDA OPENCU check_rhs_exp CLOSECU
  156           | OPENCU • stand_id CLOSECU GETA
  157 rel_to_energy: OPENCU • stand_id CLOSECU KE_AFTER OPENCU check_rhs_exp CLOSECU
  158              | OPENCU • stand_id CLOSECU PE_AFTER OPENCU check_rhs_exp CLOSECU
  159              | OPENCU • stand_id CLOSECU TE_AFTER OPENCU check_rhs_exp CLOSECU
  160 rel_to_angle: OPENCU • stand_id CLOSECU ANGLE_AFTER OPENCU check_rhs_exp CLOSECU
  161 rel_to_collision: OPENCU • stand_id CLOSECU COLLIDE OPENCU stand_id COMMA ID CLOSECU
  162                 | OPENCU • stand_id CLOSECU COLLIDE OPENCU stand_id CLOSECU
  163                 | OPENCU • stand_id CLOSECU TIME_TO_COLLIDE OPENCU stand_id CLOSECU
  164 miscellaneous: OPENCU • stand_id CLOSECU S_AFTER OPENCU check_rhs_exp CLOSECU
  165              | OPENCU • stand_id CLOSECU ROC_AFTER OPENCU check_rhs_exp CLOSECU
  166              | OPENCU • stand_id CLOSECU P_AFTER OPENCU check_rhs_exp CLOSECU
  167              | OPENCU • stand_id CLOSECU TIME_TO_R OPENCU term_misc COMMA term_misc CLOSECU
  168              | OPENCU • stand_id CLOSECU TIME_TO_V OPENCU term_misc COMMA term_misc CLOSECU

    ID  shift, and go to state 79

    stand_id  go to state 80


State 39

  123 unary_operation_without_dot: UNINEG • check_rhs_exp

    $default  reduce using rule 175 ($@11)

    check_rhs_exp  go to state 81
    $@11           go to state 78


State 40

  124 return_stmt: DARR • check_rhs_exp DOT
  125            | DARR • DOT

    DOT  shift, and go to state 82

    $default  reduce using rule 175 ($@11)

    check_rhs_exp  go to state 83
    $@11           go to state 78


State 41

   21 body: SCOPEOPEN • $@3 OPENCU body SCOPECLOSE $@4 CLOSECU body

    $default  reduce using rule 19 ($@3)

    $@3  go to state 84


State 42

    8 startfn: START OPENCU $@1 body • $@2 CLOSECU

    $default  reduce using rule 7 ($@2)

    $@2  go to state 85


State 43

  171 decl_stmt_with_exp: datatypes • expressions DOT

    ID  shift, and go to state 86

    single_variable          go to state 87
    expressions              go to state 88
    single_variable_declare  go to state 89
    expression               go to state 90


State 44

   73 single_variable_for_exp_stmt: single_variable •
  122 unary_operation_without_dot: single_variable • UNIOP

    UNIOP  shift, and go to state 91

    $default  reduce using rule 73 (single_variable_for_exp_stmt)


State 45

   74 exp_stmt: single_variable_for_exp_stmt • ASSGN check_rhs_exp DOT

    ASSGN  shift, and go to state 92


State 46

    9 body: exp_stmt • body

    INT        shift, and go to state 1
    DOUBLE     shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    MASS       shift, and go to state 5
    TIME       shift, and go to state 6
    POSITION   shift, and go to state 7
    VELOCITY   shift, and go to state 8
    ACC        shift, and go to state 9
    ENERGY     shift, and go to state 10
    THETA      shift, and go to state 11
    E          shift, and go to state 12
    DISTANCE   shift, and go to state 13
    MOMENTUM   shift, and go to state 14
    ID         shift, and go to state 32
    INPUT      shift, and go to state 33
    OUTPUT     shift, and go to state 34
    LOOP       shift, and go to state 35
    MAG        shift, and go to state 36
    OPENSQ     shift, and go to state 37
    OPENCU     shift, and go to state 38
    UNINEG     shift, and go to state 39
    DARR       shift, and go to state 40
    CMT        shift, and go to state 16
    SCOPEOPEN  shift, and go to state 41

    $default  reduce using rule 18 (body)

    body                          go to state 93
    primi_datatype                go to state 20
    non_pri_datatype              go to state 21
    datatypes                     go to state 43
    single_variable               go to state 44
    single_variable_for_exp_stmt  go to state 45
    exp_stmt                      go to state 46
    call_stmt_with_dot            go to state 47
    call_stmt_without_dot         go to state 48
    conditional_stmt_start        go to state 49
    conditional_stmt              go to state 50
    loop_stmt                     go to state 51
    unary_operation_without_dot   go to state 52
    return_stmt                   go to state 53
    comments                      go to state 54
    output_stmt                   go to state 55
    input_stmt                    go to state 56
    inbuilt_functions_with_dot    go to state 57
    inbuilt_functions             go to state 58
    rel_to_mag                    go to state 59
    rel_to_pos                    go to state 60
    rel_to_vel                    go to state 61
    rel_to_momentum               go to state 62
    rel_to_acc                    go to state 63
    rel_to_energy                 go to state 64
    rel_to_angle                  go to state 65
    rel_to_collision              go to state 66
    miscellaneous                 go to state 67
    decl_stmt_with_exp            go to state 68


State 47

   10 body: call_stmt_with_dot • body

    INT        shift, and go to state 1
    DOUBLE     shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    MASS       shift, and go to state 5
    TIME       shift, and go to state 6
    POSITION   shift, and go to state 7
    VELOCITY   shift, and go to state 8
    ACC        shift, and go to state 9
    ENERGY     shift, and go to state 10
    THETA      shift, and go to state 11
    E          shift, and go to state 12
    DISTANCE   shift, and go to state 13
    MOMENTUM   shift, and go to state 14
    ID         shift, and go to state 32
    INPUT      shift, and go to state 33
    OUTPUT     shift, and go to state 34
    LOOP       shift, and go to state 35
    MAG        shift, and go to state 36
    OPENSQ     shift, and go to state 37
    OPENCU     shift, and go to state 38
    UNINEG     shift, and go to state 39
    DARR       shift, and go to state 40
    CMT        shift, and go to state 16
    SCOPEOPEN  shift, and go to state 41

    $default  reduce using rule 18 (body)
